--- a/src/universal/modules/auth/components/Auth/Auth.css
+++ b/src/universal/modules/auth/components/Auth/Auth.css
@@ -32,3 +32,7 @@
   background: white;
   padding: 8px;
 }
+
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 1000px white inset !important;
+}
