--- a/src/universal/modules/auth/components/Auth/Auth.css
+++ b/src/universal/modules/auth/components/Auth/Auth.css
@@ -36,3 +36,28 @@
 input:-webkit-autofill {
   -webkit-box-shadow: 0 0 0 1000px white inset !important;
 }
+.authForm{
+  margin-top: 20%;
+}
+.headingWrapper{
+  display: flex;
+  justify-content: center;
+}
+.heading{
+  display: flex;
+  align-items: center;
+  font-weight: 100;
+  font-size: 1.4em;
+}
+.buttonWrapper{
+  margin: 30px 0;
+  display: flex;
+  justify-content: center;
+}
+.inputWrapper{
+  margin: 0 0 20px;
+}
+.logo{
+  height: 40px;
+  margin: 0 10px 0 0;
+}
